Fixed landing form not adapting correctly on small screens

--- a/src/views/Landing/Landing.css
+++ b/src/views/Landing/Landing.css
@@ -10,7 +10,7 @@
 
 .landing-form {
   display: flex;
-  width: 200px;
+  width: 300px;
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
@@ -18,7 +18,7 @@
 
 .landing-username {
   display: inline-block;
-  width: 310px;
+  width: 100%;
   height: 40px;
   padding: 22px 15px;
   border: 0;
@@ -37,7 +37,7 @@
 
 .game-options {
   display: flex;
-  width: 380px;
+  width: 100%;
   justify-content: space-between;
   margin-bottom: 10px;
 }
